# ModelBridge

./: .env.example  LICENSE  README.md  pyproject.toml
basic/: __init__.py
mysql_module/: data.sql  knowledge.md  mysql_api.py  prompt.txt  test_mysql_api.py
